# gametest

./: CMakeLists.txt  README  generate.sh
headers/: GameConfig.h.in
include/: GameConfig.h.in  drawer.h  game.h  misc.h  opengl.h  settings.h.in  shader.h
shaders/: loadShader.cpp  simplefrag.sdr  simplevert.sdr
src/: drawer.cpp  game.cpp  misc.cpp  settings.cpp  shader.cpp
